Wrote JS script to connect to Football Predictions API using Fetch. Use Predictions endpoint to get info on the next upcoming match.

--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ body, html {
     text-align: center;
     background-image:teal;
   }
+
+  .upcoming-match {
+    color: black;
+  }
   
   /* Responsive columns - one column layout (vertical) on small screens */
   @media screen and (max-width: 600px) {
